fix: Add nav-blog's z-index

--- a/assets/scss/layout/_navbar.scss
+++ b/assets/scss/layout/_navbar.scss
@@ -49,6 +49,7 @@
   &-blog {
     height: 56px;
     top: $--nav-height;
+    z-index: 9;
   }
 }
 
